@@ -47,7 +47,7 @@ extern XPP_DEVICE_TYPE XDEVICE_TYPE_IR_REMOTE_TABLE;
 #define XINPUT_IR_REMOTE_MY_PICTURES    6
 #define XINPUT_IR_REMOTE_MY_VIDEOS      7
 
-#define XINPUT_IR_REMOTE_RECORD         23
+#define XINPUT_IR_REMOTE_RECORD         232
 
 #define XINPUT_IR_REMOTE_START          37
 #define XINPUT_IR_REMOTE_VOLUME_PLUS    208
@@ -58,9 +58,9 @@ extern XPP_DEVICE_TYPE XDEVICE_TYPE_IR_REMOTE_TABLE;
 
 #define XINPUT_IR_REMOTE_RECORDED_TV    101
 #define XINPUT_IR_REMOTE_LIVE_TV        24
-
+#define XINPUT_IR_REMOTE_STAR           40
+#define XINPUT_IR_REMOTE_HASH           41
 #define XINPUT_IR_REMOTE_CLEAR          249
-
 
 typedef struct _XINPUT_IR_REMOTE
 {
